<resources>
    <string name="app_name">ClientOrder</string>
    <string name="language">ENG</string>
    <string name="title_pizza">Pizza</string>
    <string name="title_salad">Salads</string>
    <string name="title_dinner">Dinners</string>
    <string name="title_souces">Sauces</string>
    <string name="title_drink">Drinks</string>
    <string name="basket">Basket</string>
    <string name="logout">Log out</string>
    <string name="loginActivity">Login</string>
    <string name="contact">Contact</string>
    <string name="home">About us</string>
    <string name="private_policy">Privacy policy</string>
    <string name="profil">Profile</string>
    <string name="phoneNumber">784 905 740</string>
    <string name="PhoneText">Phone number:</string>
    <string name="Email">perseuszgamesstudio@gmail.com</string>
    <string name="EmailText">E-mail</string>
    <string name="Adress">32-340 Wolbrom, \n Oś. Skalska 5/18</string>
    <string name="Adres">Address:</string>
    <string name="homeDescription">XYZ is a famous restaurant in XYZ. It is a wonderful place with wooden decorations and its simplicity is astonishing. There are tables for two or four people, some outside (weather permitting), for a total of 40-50 people. They serve healthy, organic food from local producers. You can choose from a menu of pizzas, fast-food dishes, as well as sets of salads and drinks, including alcoholic drinks. Fast-food dishes include: fries, kebabs, casseroles, lasagne.</string>
    <string name="hourOpener">Godziny otwarcia: \n Pon-Sob: 7:00-23:00 \n Niedziela: 10:00-18:00</string>
    <string name="nullBasket">Basket is empty</string>
    <string name="OrderInProgress">Active orders</string>
    <string name="OrderFinished">History of completed orders</string>
    <string name="nullProfilCurrent">No current orders</string>
    <string name="nullHistory">History is empty</string>
    <string name="buy">Buy now</string>
    <string name="delete">Delete</string>
    <string name="null1">" "</string>
    <string name="cityKielce">Kielce</string>
    <string name="cityKrakow">Kraków</string>
    <string name="login">Login</string>
    <string name="getEmailProvider">Choose an email application :)</string>
    <string name="deletedSucces">Successfully deleted</string>
    <string name="order">Order:</string>
    <string name="price">Amount:</string>
    <string name="hourDelivery">Time of delivery:</string>
    <string name="noOrders">No current orders</string>
    <string name="failLoad">The completed stories could not be saved</string>
    <string name="deleteHistory">Delete from history</string>
    <string name="deleteHistoryMEss">Enter the order items you want to delete or delete all history.</string>
    <string name="deleteRecord">CLEAR RECORD</string>
    <string name="badWord">Invalid character entered</string>
    <string name="deleted">Removed</string>
    <string name="noOrderOnList">There is no such item on the list</string>
    <string name="deleteAll">CLEARS EVERYTHING</string>
    <string name="cancel">CANCEL</string>
    <string name="canceled">Canceled</string>
    <string name="baskedDeleted">Basked has been deleted</string>
    <string name="baskedDeletedFail">Error while deleting the basket</string>
    <string name="noMagazine">Out of stock</string>
    <string name="toBAskedSucces">Transferred successfully</string>
    <string name="cannotBeEmpty">It cannot be 0</string>
    <string name="add">ADD</string>
    <string name="addMessage">Add to cart. If you want to add more than 1 item, please enter the number.</string>
    <string name="addTitle">To shopping cart</string>
    <string name="logged">Logged in</string>
    <string name="welcome">Welcome!</string>
    <string name="loggedout">Logged out</string>
    <string name="paymentFail">The payment has not been processed. \n Sorry for the technical problem.</string>
    <string name="paymentSucces">The payment was successful.</string>
    <string name="payment">Payment</string>
    <string name="failOrder">Error placing the order</string>
    <string name="orderSucces">The order has been placed</string>
    <string name="cannotNullOrder">You cannot place an empty order</string>
    <string name="total">TOTAL:</string>
    <string name="deleteFromBAsked">Remove from basket</string>
    <string name="deleteBaskedMEss">Enter the order items you want to delete or delete the entire cart.</string>
    <string name="noOnlList">There is no such item on the list</string>
    <string name="phoneMess">Please enter your phone number. Enter a 9-digit number without spaces and area code.</string>
    <string name="next">NEXT</string>
    <string name="noPhone9">This number does not have 9 digits.</string>
    <string name="paymentOptions">PAYMENT METHOD.</string>
    <string name="cash">CASH</string>
    <string name="card">CARD</string>
    <string name="appPayment">PAYMENT FROM THE APP</string>
    <string name="address">Delivery address:</string>
    <string name="nullAdress">Adres dostawy jest pusty.</string>
    <string name="chooseCity">Delivery city:</string>
    <string name="chooseeCity">Please select a city</string>
    <string name="deliveryhour">"Delivery time: "</string>
    <string name="appTime1">The application can place orders at the earliest from 8 am.</string>
    <string name="appTime2">The application supports a maximum of orders up to 22.</string>
    <string name="appTime3">The restaurant hasnt opened yet. Please come back to us after 7 am.</string>
    <string name="appTime4">It is not possible to place orders in the application after 9 p.m., please contact us by phone.</string>
    <string name="localDelivery">I order to the premises</string>
    <string name="houseDelivery">I order to home</string>
    <string name="chooseDeliveryTitle">Delivery method</string>
    <string name="chooseDeliveryMessage">Choose a delivery method</string>
    <string name="savedSuccess">Successfully saved</string>
    <string name="updateNumber">Do you want to edit this number?</string>
    <string name="nullDatabase">Database is empty</string>
    <string name="updateaddress">o you want to edit this address?</string>
    <string name="points">Points</string>
    <string name="rewardInfo">You will receive 1 point for every 1 PLN you spend. You can later convert 1 point into a 1 penny discount.</string>
    <string name="alertTitle">Do you want to use the discount points?</string>
    <string name="pointSeekInfo">1 point = 0.01 PLN discount.</string>
    <string name="tobigReward">The discount cannot exceed half the  value of the contract.</string>

</resources>