<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="84dp"
    android:background="@drawable/gradient1"
    android:orientation="vertical"
    tools:context=".MenuActivities.ContactActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardElevation="5dp"
        card_view:cardCornerRadius="10dp">



        <LinearLayout
            android:id="@+id/text_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/EmailText"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">



                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:contentDescription="@string/null1"
                    android:id="@+id/email_button"
                    android:background="@drawable/password_background"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:id="@+id/email_adres"
                    android:textSize="18sp"
                    android:text="@string/Email"/>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/PhoneText"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">



                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:contentDescription="@string/null1"
                    android:id="@+id/phone_button"
                    android:background="@drawable/password_background"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:id="@+id/phone_number"
                    android:text="@string/phoneNumber"/>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/Adres"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">



                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:id="@+id/adress_button"
                    android:contentDescription="@string/null1"
                    android:background="@drawable/password_background"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/Adress"/>
            </FrameLayout>

        </LinearLayout>

        <FrameLayout
            android:background="@drawable/gradient4"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"/>

        <FrameLayout
            android:background="@drawable/gradient3"
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"/>

        <FrameLayout
            android:background="@drawable/gradient"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_gravity="bottom"/>

        <FrameLayout
            android:background="@drawable/gradient2"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_gravity="end"/>

    </androidx.cardview.widget.CardView>



</LinearLayout>