<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient1"
    android:layout_height="match_parent"
    android:paddingTop="34dp"
    android:orientation="vertical"
    tools:context=".BasketActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.85"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/card_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardElevation="5dp"
                card_view:cardCornerRadius="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">




                    <LinearLayout
                        android:id="@+id/LinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/positionTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"

                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:gravity="center"
                            android:scaleType="centerCrop"
                            android:textColor="#000"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/nameTextViewBasket"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:scaleType="centerCrop"
                            android:text="@string/nullBasket"
                            android:textColor="#000"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/priceTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:gravity="end"
                            android:textColor="#000"
                            android:textSize="18sp"  />



                    </LinearLayout>

                    <TextView
                        android:id="@+id/priceTotalTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:foregroundGravity="right"
                        android:textColor="@color/md_red_A700"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="125dp"
                        android:layout_gravity="center"
                        android:id="@+id/ProgressBar"
                        android:indeterminateDrawable="@drawable/cbp_1"
                        android:foregroundGravity="center"/>
                </LinearLayout>




                <FrameLayout
                    android:background="@drawable/gradient4"
                    android:layout_width="6dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"/>

                <FrameLayout
                    android:background="@drawable/gradient3"
                    android:layout_width="6dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"/>

                <FrameLayout
                    android:background="@drawable/gradient"
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:layout_gravity="bottom"/>

                <FrameLayout
                    android:background="@drawable/gradient2"
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:layout_gravity="end"/>

            </androidx.cardview.widget.CardView>




        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/addOrderButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/buy"
                android:background="@drawable/shop_button" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:contentDescription="@string/delete"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/delete_button" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>